Added Java 18 vector API and NR Java Agent